--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "silverstripe/framework": ">=4.0",
-        "silverstripe/cms": ">=4.0",
+        "silverstripe/framework": "^4 || ^5",
         "undefinedoffset/silverstripe-nocaptcha": "*"
     },
     "autoload": {
